alignment issues fixed

--- a/css/fileupload.css
+++ b/css/fileupload.css
@@ -134,7 +134,7 @@ textarea {
     padding-right: 9em;
 }
 #textareaBefore {
-    border-right: 1px solid black !important;
+    border-right: 1px solid#C4C4C4 !important;
 }
 
 @media (max-width: 576px) {
@@ -168,6 +168,11 @@ textarea {
     }
     #textareaBefore {
         border-right: 0 !important;
+    }
+    .text{
+        text-align: center;
+        padding: 0;
+        margin-left: 2em;
     }
 }
 
